--- a/typescript/simple-mercari-web/Dockerfile
+++ b/typescript/simple-mercari-web/Dockerfile
@@ -1,7 +1,20 @@
+# ビルドフェーズ
+FROM node:20-alpine AS builder
+WORKDIR /app
+
+COPY . .
+
+RUN npm install
+RUN npm run build
+
+# 実行フェーズ
 FROM node:20-alpine
 WORKDIR /app
 
-RUN addgroup -S mercari && adduser -S trainee -G mercari
-USER trainee
+RUN npm install -g serve
 
-CMD ["node", "-v"]
+COPY --from=builder /app/dist /app/dist
+
+EXPOSE 3000
+CMD ["serve", "-s", "dist", "-l", "3000"]
+
